# counterfactual-biology-explorer

./: .gitignore  ASSESSMENT.md  CHANGES.md  CLAUDE.md  DEMO_VIDEO_SCRIPT.md  IMPACT.md  LICENSE  NOVELTY.md  README.md  REPRODUCIBILITY_CHECK.md  ROADMAP.md  SUBMISSION.md  acquisition.py  carpool_substrate.npz  combicone.py  combicone_cli.py  environment.yml  neural_baseline.py  pyproject.toml  reachability.py  reproduce.sh  reproduce_paper.sh  requirements.txt  screen_ingest.py  screenloop.py  validation.py
.claude/: settings.local.json
app/: DEPLOY.md  _build_index.py  explorer.py  index.html
configs/: arce_external_validation.json  donor_pair_transfer.json  validation_harness.json  zhu_arrayed_validation.json
data/: README.md  fetch_de_stats.sh
docs/: CAUSAL.md  CONSOLIDATION.md  CROSS_CELLTYPE_TRANSFER.md  FINDINGS.md  GENERALIZABILITY_SURVEY.md  METHODS.md  NOVELTY.md  REINFORCEMENT_RESULTS.md  RELATED_WORK.md  RESULTS.md  REVIEWER_RESPONSE.md  SCIENTIFIC_VALIDATION_PLAN.md  Technical_Dossier.md  VALIDATION_REPORT.md  analytic_null_note.md
manuscript/: README.md  compile.sh  main.bbl  main.tex  manuscript_facts.json  references.bib
notebooks/: 01_exploratory_data_analysis.ipynb  05_target_id_showcase.ipynb  README.md  bring_your_own_target.ipynb
results/: README.md  analytic_vs_mc_by_double.csv  analytic_vs_mc_validation.json  donor_pair_transfer.json  findings.json  guide_pair_transfer.json  manifest.json  references.csv  validation_harness.json
scripts/: certificate_dossier.py  kway_validate_real.py  kway_validate_synth.py  reproduce_paper.py  run_arce_external_validation.py  run_donor_pair_transfer.py  run_screenloop_campaign.py  run_validation_harness.py  synth_triple_screen.py  (+2 more)
(+69 files in other folders)
