[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-state-reachability"
version = "0.1.0"
description = "Fail-closed geometric reachability tests for measured perturbation libraries"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "MasalaKimchi" }]
keywords = [
  "perturb-seq",
  "transcriptomics",
  "convex-geometry",
  "reachability",
  "reproducible-research",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
]

[project.optional-dependencies]
plot = ["matplotlib==3.9.2"]
test = ["matplotlib==3.9.2", "pytest==7.4.4"]
external = ["h5py==3.11.0", "anndata==0.10.9"]
tutorial = [
  "matplotlib==3.9.2",
  "nbclient>=0.10,<1",
  "nbconvert>=7.16,<8",
  "nbformat>=5.10,<6",
  "ipykernel>=6.29,<7",
]

[project.urls]
Repository = "https://github.com/MasalaKimchi/cell-state-reachability"
Issues = "https://github.com/MasalaKimchi/cell-state-reachability/issues"

[tool.setuptools]
py-modules = [
  "combicone",
  "effect_dictionary",
  "library_coverage",
  "reachability",
  "validation",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tutorial/*.ipynb" = ["E402"]
